Разметка и стилизация страницы о компании

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
             <a class="navigation__link" href="#">Отзывы</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">О компании</a>
+            <a class="navigation__link" href="about.html">О компании</a>
           </li>
         </ul>
       </nav>
