Разметка и стилизация страницы с квартирами

--- a/source/index.html
+++ b/source/index.html
@@ -16,7 +16,7 @@
       <nav class="header__navigation navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Квартиры</a>
+            <a class="navigation__link" href="products.html">Квартиры</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">Отзывы</a>
@@ -170,8 +170,8 @@
           <li class="products__item product-card">
             <a class="product-card__link" href="#">
               <picture>
-                <source type="image/webp" srcset="img/product-6@1x.webp 1x, img/product-6@2x.webp 2x" width="369" height="220">
-                <img class="product-card__image" src="img/product-6@1x.jpg" srcset="img/product-6@1x.jpg 1x, img/product-6@2x.jpg 2x" width="369" height="220" alt="Квартира 6.">
+                <source type="image/webp" srcset="img/product-16@1x.webp 1x, img/product-16@2x.webp 2x" width="369" height="220">
+                <img class="product-card__image" src="img/product-16@1x.jpg" srcset="img/product-16@1x.jpg 1x, img/product-16@2x.jpg 2x" width="369" height="220" alt="Квартира 6.">
               </picture>
             </a>
             <div class="product-card__wrapper">
