--- a/source/about.html
+++ b/source/about.html
@@ -16,7 +16,7 @@
       <nav class="header__navigation navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Квартиры</a>
+            <a class="navigation__link" href="products.html">Квартиры</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">Отзывы</a>
